@@ -12,5 +12,9 @@ Authority.authority = cpan:FLORA
 Git::NextVersion.version_regexp = ^([\d._]+)(-TRIAL)?$
 Git::Tag.tag_format = %v%t
 Prereqs::AuthorDeps.exclude[0] = inc::MakeMaker
+Test::MinimumVersion.max_target_perl = 5.014
 
 [=inc::MakeMaker]
+
+[Prereqs / RuntimeRequires]
+perl = 5.014
